--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "animate.css": "^4.1.1",
     "bulma": "^0.9.3",
     "express": "^4.17.1",
+    "flatpickr": "^4.6.9",
     "material-design-icons": "^3.0.1",
+    "ng2-flatpickr": "^9.0.0",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~6.6.0",
